@@ -1,5 +1,10 @@
 2005-12-07  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Fix setting devbuf
+	when rd_parm is 0 or 1.
+
+2005-12-07  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Fix test for
 	valid file position at EOM.
 
